# HuiseDesk

./: .gitignore  README.md  UI-PREVIEW.md  USAGE.md  package-lock.json  package.json  start.js  tsconfig.json
electron-app/: package.json  tsconfig.json
electron-app/main/channels/: index.ts
electron-app/public/: index.html
electron-app/renderer/: README.md
electron-app/renderer/components/: ShotGridUploader.tsx
electron-app/renderer/components/Table/: VirtualCanvasTable.tsx
electron-app/renderer/pages/: ShotGridPage.tsx
llm-server/src/: app.js
main/: main.js  main.ts  preload.ts
main/channels/: winApiChannels.ts
main/service/: openWinService.ts
public/: index.html
renderer/: App.tsx  index.html
renderer/components/: ChatBox.tsx  ShotGridUploader.tsx  VirtualDomHugaTable.tsx  index.ts
renderer/components/Table/: CanvasHugeTable.tsx  CanvasTable.tsx  DomHugeTable.tsx  DomTable.tsx  VirtualCanvasTable.tsx  VirtualDomHugaTable.tsx  VirtualDomTable.tsx
renderer/pages/: ChatPage.tsx  HomePage.tsx  MDTPage.tsx  VirtualDomPage.tsx
renderer/types/: winApiTypes.ts
scripts/: dev.cjs  dev.js  vite.main.config.js  vite.renderer.config.js
server/: app.js  llm.js
sg/: README.md
sg-scripts/: README.md  pyproject.toml
sg-scripts/src/: sg.py
sg/shotgrid/src/: sg.py
