[project]
name = "sg-scripts"
version = "0.1.0"
description = "Shotgun API Python scripts"
authors = [
    { name = "zsgnaij", email = "18057950097@163.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "shotgun_api3>=3.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
